--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/static/css/icon.css">
 </head>
 <body>
-  <div class="aw-side ps-container" id="aw-side">
+  <div class="fk-side ps-container" id="fk-side">
     <div class="mod">
         <div class="mod-logo">
            <!--  <img class="pull-left" src="http://localhost/wecenter/static/admin/img/logo.png" alt=""> -->
@@ -245,9 +245,9 @@
                     </ul>
     </div>
 </div>
-<div class="aw-content-wrap">
+<div class="fk-content-wrap">
     <div class="row">
-        <div class="aw-header">
+        <div class="fk-header">
 
             <div class="mod-header-user">
                 <div class="pull-left">
