--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -9,287 +9,7 @@
   <link rel="stylesheet" href="/static/css/icon.css">
 </head>
 <body>
-  <div class="fk-side ps-container" id="fk-side">
-    <div class="mod">
-        <div class="mod-logo">
-           <!--  <img class="pull-left" src="http://localhost/wecenter/static/admin/img/logo.png" alt=""> -->
-            <h1>FireKylin</h1>
-        </div>
-
-<!--         <div class="mod-message">
-            <div class="message">
-                <a class="btn btn-sm" href="http://localhost/wecenter" target="_blank" title="首页">
-                    <i class="icon icon-home"></i>
-                </a>
-
-                <a class="btn btn-sm" href="http://localhost/wecenter/?/admin/" title="概述">
-                    <i class="icon icon-ul"></i>
-                </a>
-
-                <a class="btn btn-sm" href="http://localhost/wecenter/?/admin/logout/" title="退出">
-                    <i class="icon icon-logout"></i>
-                </a>
-            </div>
-        </div> -->
-
-        <ul class="mod-bar" style="margin-top:10px;">
-            <input type="hidden" id="hide_values" val="0">
-                        <li>
-                <a href="/admin" class=" icon icon-home active">
-                    <span>概述</span>
-                </a>
-                </li>
-                        <li>
-                <a href="javascript:;" class=" icon icon-setting" data="icon">
-                    <span>文章管理</span>
-                </a>
-                
-                <ul class="hide">
-                    <li>
-                        <a href="http://localhost/wecenter/?/admin/settings/category-site">
-                            <span>文章列表</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/settings/category-register">
-                            <span>添加文章</span>
-                        </a>
-                    </li>
-                                        
-                                    </ul>
-                            </li>
-                        <li>
-                <a href="javascript:;" class=" icon icon-reply" data="icon">
-                    <span>页面管理</span>
-                </a>
-                
-                <ul class="hide">
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/question/question_list/">
-                            <span>页面列表</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/article/list/">
-                            <span>添加页面</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/topic/list/">
-                            <span>话题管理</span>
-                        </a>
-                    </li>
-                                    </ul>
-                            </li>
-                        <li>
-                <a href="javascript:;" class=" icon icon-user" data="icon">
-                    <span>分类管理</span>
-                </a>
-                
-                <ul class="hide">
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/user/list/">
-                            <span>分类</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/user/group_list/">
-                            <span>用户组</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/user/invites/">
-                            <span>批量邀请</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/user/job_list/">
-                            <span>职位设置</span>
-                        </a>
-                    </li>
-                                    </ul>
-                            </li>
-                        <li>
-                <a href="javascript:;" class=" icon icon-report" data="icon">
-                    <span>标签管理</span>
-                </a>
-                
-                <ul class="hide">
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/approval/list/">
-                            <span>内容审核</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/user/verify_approval_list/">
-                            <span>认证审核</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/user/register_approval_list/">
-                            <span>注册审核</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/question/report_list/">
-                            <span>用户举报</span>
-                        </a>
-                    </li>
-                                    </ul>
-                            </li>
-                        <li>
-                <a href="javascript:;" class=" icon icon-signup" data="icon">
-                    <span>用户管理</span>
-                </a>
-                
-                <ul class="hide">
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/nav_menu/">
-                            <span>导航设置</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/category/list/">
-                            <span>分类管理</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/feature/list/">
-                            <span>专题管理</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/page/">
-                            <span>页面管理</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/help/list/">
-                            <span>帮助中心</span>
-                        </a>
-                    </li>
-                                    </ul>
-                            </li>
-                        <li>
-                <a href="javascript:;" class=" icon icon-share" data="icon">
-                    <span></span>
-                </a>
-                
-                <ul class="hide">
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/weixin/accounts/">
-                            <span>微信多账号管理</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/weixin/mp_menu/">
-                            <span>微信菜单管理</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/weixin/reply/">
-                            <span>微信自定义回复</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/weixin/third_party_access/">
-                            <span>微信第三方接入</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/weixin/qr_code/">
-                            <span>微信二维码管理</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/weixin/sent_msgs_list/">
-                            <span>微信消息群发</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/weibo/msg/">
-                            <span>微博消息接收</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/edm/receiving_list/">
-                            <span>邮件导入</span>
-                        </a>
-                    </li>
-                                    </ul>
-                            </li>
-                        <li>
-                <a href="javascript:;" class=" icon icon-inbox" data="icon">
-                    <span>系统设置</span>
-                </a>
-                
-                <ul class="hide">
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/edm/tasks/">
-                            <span>任务管理</span>
-                        </a>
-                    </li>
-                                        <li>
-                        <a href="http://localhost/wecenter/?/admin/edm/groups/">
-                            <span>用户群管理</span>
-                        </a>
-                    </li>
-                                    </ul>
-                            </li>
-                        <li>
-                <a href="javascript:;" class=" icon icon-job" data="icon">
-                    <span>工具</span>
-                </a>
-                
-                            </li>
-                    </ul>
-    </div>
-</div>
-<div class="fk-content-wrap">
-    <div class="row">
-        <div class="fk-header">
-
-            <div class="mod-header-user">
-                <div class="pull-left">
-                    <ol class="breadcrumb">
-                      <li class="active"> > 概况</li>
-                    </ol>
-                </div>
-                <ul class="pull-right">
-                    
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle mod-bell" data-toggle="dropdown">
-                            <i class="icon icon-bell"></i>
-                                            </a>
-                        <ul class="dropdown-menu mod-chat">
-                                            <p>没有通知</p>
-                                            </ul>
-                    </li>
-
-                    <li class="dropdown username">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="http://localhost/wecenter/static/common/avatar-mid-img.png" class="img-circle" width="30">
-                            admin                    <span class="caret"></span>
-                        </a>
-
-                        <ul class="dropdown-menu pull-right mod-user">
-                            <li>
-                                <a href="http://localhost/wecenter" target="_blank"><i class="icon icon-home"></i>首页</a>
-                            </li>
-
-                            <li>
-                                <a href="http://localhost/wecenter/?/admin/"><i class="icon icon-ul"></i>概述</a>
-                            </li>
-
-                            <li>
-                                <a href="http://localhost/wecenter/?/admin/logout/"><i class="icon icon-logout"></i>退出</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+  <div id="app"></div>
+  <script src="/static/dist/admin.bundle.js"></script>
 </body>
 </html>
