--- a/view/admin/user_login.html
+++ b/view/admin/user_login.html
@@ -9,8 +9,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
 <link href="/static/module/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet"/>
 <style type="text/css" media="screen">
-body{
-  background: #F6F6F3
+html,body{
+  background: #F6F6F3;
+  height: 100%;
 }
 .login{
   width: 300px;
@@ -26,7 +27,7 @@ a:hover{
 </style>
 </head>
 <body>
-<div class="container">
+<div class="container" style="position:relative">
   <div class="row">
       <div class="login">
       <h1 class="text-center">
