--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
+  <title>{{options.title}}</title>
   <link rel="stylesheet" href="/static/module/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="/static/css/admin.css">
   <link rel="stylesheet" href="/static/css/icon.css">
