--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -32,6 +32,7 @@ ul,ol{padding:0;list-style:none;}
 .user-create .pull-left{width: 44%;margin-right: 6%}
 .fk-alert{position: fixed;top: 8px;min-width: 200px;left: 50%;margin-left: -100px;text-align: center;}
 .options-general{max-width: 600px;}
+.form-group {overflow: hidden;}
 
 #app,.fk{height: 100%;}
 /* 警告提示box */
