--- a/view/home/layout.html
+++ b/view/home/layout.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="/static/images/favicon.png">
         <meta name="keyword" content="{{options.keywords}}">
         <meta name="description" content="{{options.description}}">
-        <title>{{options.title}}</title>
+        <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="/static/css/home.css" type="text/css">
     </head>
     <body></body>
