--- a/view/home/layout.html
+++ b/view/home/layout.html
@@ -27,7 +27,7 @@
                 </a>
             </li>
             <li>
-                <a class="" href="/archive/">
+                <a class="" href="/archives/">
                     <i class="iconfont icon-archive" title="归档"></i>
                     <span>归档</span>
                 </a>
