--- a/view/home/post_page.html
+++ b/view/home/post_page.html
@@ -6,6 +6,11 @@
 
 {% block content %}
 <div id="page-post">
-
+    <article class="markdown">
+      <h1>{{page.title}}</h1>
+      <div class="content">
+          {{page.content | safe}}
+      </div>
+    </article>
 </div>
 {% endblock %}
