--- a/view/home/layout.html
+++ b/view/home/layout.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
         <link rel="icon" href="/static/images/favicon.png">
+        <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/rss.html">
         <meta name="keyword" content="{{options.keywords}}">
         <meta name="description" content="{{options.description}}">
         <title>{% block title %}{% endblock %}</title>
@@ -64,7 +65,7 @@
         </ul>
         <ul class="buttons">
             <li>
-                <a class="" href="/atom.xml">
+                <a class="" href="/rss.html">
                     <i class="iconfont icon-rss" title="RSS"></i>
                     <span>RSS</span>
                 </a>
