--- a/www/static/css/home/article.css
+++ b/www/static/css/home/article.css
@@ -355,6 +355,7 @@ article {
   padding:30px 0;
 }
 
+
 article .meta {
   position:relative;
   float:right;
@@ -535,9 +536,9 @@ article .entry-content .date {
   font-style:italic;
 }
 
-article .entry-content a:hover {
+/*article .entry-content a:hover {
   text-decoration:underline;
-}
+}*/
 
 article .entry-content p,
 article .entry-content blockquote,
@@ -574,4 +575,33 @@ article .entry-content ul,
 article .entry-content ol,
 article .entry-content dl {
   margin-left:25px;
+}
+
+
+
+/*** page-tag ***/
+article.tags,
+article.archive,
+article.page{
+  border-bottom: 0;
+}
+
+
+article.tags section a {
+  display: inline-block;
+  font-size: 14px;
+  padding: 0 15px;
+  height: 40px;
+  line-height: 40px;
+  color: rgba(36,121,204,.8);
+  border: 1px solid rgba(36,121,204,.8);
+  border-radius: 4px;
+  margin: 0 15px 10px 0;
+  text-decoration: none;
+  -webkit-transition: color .2s cubic-bezier(.4,.01,.165,.99),border .2s cubic-bezier(.4,.01,.165,.99);
+  transition: color .2s cubic-bezier(.4,.01,.165,.99),border .2s cubic-bezier(.4,.01,.165,.99);
+}
+article.tags section a:hover {
+  color: #2479CC;
+  border-color: #2479CC;
 }
