--- a/view/home/post_page.html
+++ b/view/home/post_page.html
@@ -5,12 +5,10 @@
 {% endblock %}
 
 {% block content %}
-<div id="page-post">
-    <article class="markdown">
-      <h1>{{page.title}}</h1>
-      <div class="content">
-          {{page.content | safe}}
-      </div>
-    </article>
-</div>
+<article class="post detail page">
+  <h1 class="title">{{page.title}}</h1>
+  <div class="entry-content">
+      {{page.content | safe}}
+  </div>
+</article>
 {% endblock %}
