--- a/view/home/post_tag.html
+++ b/view/home/post_tag.html
@@ -5,12 +5,14 @@
 {% endblock %}
 
 {% block content %}
-<div id="page-tags">
-  <h1>标签</h1>
-  <section>
+<article class="post tags">
+  <h1 class="title">标签</h1>
+  <div class="entry-content">
+    <section>
       {% for tag in list %}
       <a href="/tags/{{tag.name}}" data-tag="{{tag.name}}">{{tag.name}}({{tag.count}})</a>
       {% endfor %}
-  </section>
-</div>
+    </section>
+  </div>
+</article>
 {% endblock %}
