--- a/view/home/layout.html
+++ b/view/home/layout.html
@@ -70,10 +70,10 @@
             </a>
             {% endif %}
           {% endif %}
-          <a class="inline" target="_blank" href="/rss.html">
+          <a class="inline" href="/rss.html">
             <i class="iconfont icon-rss" title="RSS"></i>
           </a>
-          <a class="inline" target="_blank" href="/search.html">
+          <a class="inline" href="/search.html">
             <i class="iconfont icon-search" title="Search"></i>
           </a>
         </li>
