--- a/www/static/css/home/all.css
+++ b/www/static/css/home/all.css
@@ -5,4 +5,5 @@
 @import url('header.css');
 @import url('pagination.css');
 @import url('article.css');
+@import url('search.css');
 @import url('responsive.css');
