--- a/www/theme/firekylin/res/css/all.css
+++ b/www/theme/firekylin/res/css/all.css
@@ -6,4 +6,5 @@
 @import url('pagination.css');
 @import url('article.css');
 @import url('search.css');
+@import url('footer.css');
 @import url('responsive.css');
