修复后台也无法滚动的问题

--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -12,7 +12,7 @@
 .fk-alert{position: absolute;top: 0;}
 .table tbody form tr td,
 .table tfoot form tr td{padding: 8px;border-top: 1px solid #ddd;line-height: 1.42857143;}
-html,body{height:100%;overflow: hidden;background:#eff0f4;}
+html,body{height:100%;/*overflow: hidden;*/background:#eff0f4;}
 a:hover,a:focus{text-decoration:none;cursor:pointer;}
 ul,ol{padding:0;list-style:none;}
 .middle{line-height:32px;}
