--- a/www/theme/firekylin/res/css/all.css
+++ b/www/theme/firekylin/res/css/all.css
@@ -7,4 +7,5 @@
 @import url('article.css');
 @import url('search.css');
 @import url('footer.css');
+@import url('comment.css');
 @import url('responsive.css');
