move bundle files to static/js

--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -16,6 +16,6 @@ window.SysConfig = {
 }
 </script>
 <div id="app"></div>
-<script src="/static/dist/admin.bundle.js"></script>
+<script src="/static/js/admin.bundle.js"></script>
 </body>
 </html>
