--- a/www/static/src/admin/component/post_create/style.css
+++ b/www/static/src/admin/component/post_create/style.css
@@ -8,10 +8,12 @@
 }
 .pathname > .form-group {
   float: left;
-  width: 200px;
-  margin: 0;
+  min-width: 320px;
+  margin: 0 5px;
   display: inline-block;
 }
+
+
 
 /** 文章编辑右侧 **/
 .post-create .col-xs-3 > div.button-group {
