--- a/view/home/index_install.html
+++ b/view/home/index_install.html
@@ -36,7 +36,7 @@
         </div>
         <div class="form-group">
           <label>密码</label>
-          <input type="password" name="db_password" required class="form-control"  placeholder="数据库密码">
+          <input type="password" name="db_password" class="form-control"  placeholder="数据库密码">
         </div>
         <div class="form-group">
           <label>数据库名</label>
