--- a/view/home/index_install.html
+++ b/view/home/index_install.html
@@ -46,7 +46,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>主机</label>
-          <input type="email" name="db_host" class="form-control" placeholder="数据库主机地址">
+          <input type="text" name="db_host" class="form-control" placeholder="数据库主机地址">
         </div>
         <div class="form-group">
           <label>端口</label>
