--- a/www/theme/firekylin/res/css/article.css
+++ b/www/theme/firekylin/res/css/article.css
@@ -4,6 +4,7 @@ article {
   border-top:1px solid #fff;
   position:relative;
   padding:30px 0;
+  word-wrap: break-word;
 }
 
 
@@ -129,6 +130,7 @@ article img {
   display:block;
   border:1px solid #ccc;
   margin:10px 0 5px 0;
+  max-width: 100%;
 }
 
 article table {
